--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Gaming Tournament</title>
 
+    <!-- Icons and Fonts -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
@@ -188,4 +191,4 @@
         .profile-stats { display: flex; justify-content: space-around; width: 100%; border-top: 1px solid var(--border-color); padding-top: 15px; background: rgba(15, 23, 42, 0.3); backdrop-filter: blur(5px); z-index: 1; }
         .stat-item { text-align: center; flex: 1; }
         .stat-item strong { display: block; font-size: 1.1rem; font-weight: 600; color: var(--text-primary); }
-        .stat-item span { font-size: 0.75rem; color: var(--text-secondary); } .profile-links .list-group { border-radius: 10px; overflow: hidden; border: 1px solid var(--border-color); } .profile-links .form-switch .form-check-input { background-color: var(--secondary-bg); border-color: var(--border-color); background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%28255, 255, 255, 0.25%29'/%3e%3c/svg%3e"); } .profile-links .form-switch .form-check-input:checked { background-color: var(--accent-color); border-color: var(--accent-color); background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e"); } #login-section { margin-top: 5vh; } #login-section .card { background-color: var(--card-bg); border: 1px solid var(--border-color); } #login-section .btn-primary { background-color: var(--primary-button-bg); border: none; } #login-section .btn-link { background: none; border: none; color: var(--accent-color); text-decoration: none; font-size: 0.9em; padding: 5px 0; }
+        .stat-item span { font-size: 0.75rem; color: var(--text-secondary); } .profile-links .list-group { border-radius: 10px; overflow: hidden; border: 1px solid var(--border-color); } .profile-links .form-switch .form-check-input { background-color: var(--secondary-bg); border-color: var(--border-color); background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%28255, 255, 255, 0.25%29'/%3e%3c/svg%3e"); } .profile-links .form-switch .form-check-input:checked { background-color: var(--accent-color); border-color: var(--accent-color); background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e"); } #login-section { margin-top: 5vh; } #login-section .card { background-color: var(--card-bg); border: 1px solid var(--border-color); } #login-section .btn-primary { background-color: var(--primary-button-bg); border: none; } #login-section .btn-link { background: none; border: none; color:
