--- a/index.html
+++ b/index.html
@@ -687,6 +687,23 @@
                     <a href="#" id="contactUsBtnEl" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center interactive-list-item">
                         <span><i class="bi bi-whatsapp"></i> Contact Us</span>
                         <i class="bi bi-chevron-right"></i>
+                    <script>
+document.addEventListener("DOMContentLoaded", function() {
+  const contactButtons = [
+    document.getElementById("contactUsBtnEl"),
+    document.getElementById("homeContactUsBtn")
+  ];
+  contactButtons.forEach(btn => {
+    if (btn) {
+      btn.addEventListener("click", function(e) {
+        e.preventDefault();
+        window.open("https://api.whatsapp.com/send?phone=919411139997&text=Hello%20Sir%2C%20I%20need%20help", "_blank");
+      });
+    }
+  });
+});
+</script>
+                        
                     </a>
                     <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center interactive-list-item" data-policy="privacy"> <span><i class="bi bi-shield-lock-fill"></i> Privacy Policy</span><i class="bi bi-chevron-right"></i> </a>
                     <a href="#" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center interactive-list-item" data-policy="terms"> <span><i class="bi bi-file-text-fill"></i> Terms and Conditions</span><i class="bi bi-chevron-right"></i> </a>
